@@ -17,6 +17,7 @@ these changes must reflect on the documentation at some point…
 * - added attributes [month_names, all_id, year_id, month_id, day_id] to function.html_select_date
 * - missing attribute all_empty of function.html_select_date
 * - added attributes [field_separator, option_separator, all_id, hour_id, minute_id, second_id, meridian_id, all_empty, hour_empty, minute_empty, second_empty, meridian_empty, hour_format, hour_value_format, minute_format, minute_value_format, second_format, second_value_format] to function.html_select_time
+* made time-attribute of {html_select_date} and {html_select_time} accept arrays as defined by attributes prefix and field_array
 
 
 ## Modifiers ##
@@ -31,6 +32,9 @@ these changes must reflect on the documentation at some point…
 
 ## Registry and File Access ##
 
+http://www.smarty.net/docs/en/template.resources.tpl
+
+* Smarty:: set/get/addTemplateDir()
 * Smarty::registerDefaultTemplateHandler()
 * Smarty::registerDefaultConfigHandler()
 * Smarty::$use_include_path
@@ -38,6 +42,7 @@ these changes must reflect on the documentation at some point…
 * config uses same Smarty_Resource instances as template
 * ./ and ../ behaviour in {include} and {extend} as well as $smarty->fetch()
 * Smarty::fetch("extends:db:foo.tpl|file:bar.tpl") Smarty_Resources with {extend}
+
 
 
 ## Smarty_CacheResource ##
